syntax = "proto3";
package m2.banned_word.v1;

option csharp_namespace = "Metin2Server.Shared.DbContracts";

service BannedWordService {
  rpc ExistsByWord (ExistsByWordRequest) returns (ExistsByWordResponse);
}

message ExistsByWordRequest {
  string word = 1;
}

message ExistsByWordResponse {
  bool exists = 1;
}